2020-12-10
v2.3.4.17
+ MINOR
  - Improved some error messages
  - Updated base Item Sets file to include FFXIV v5.4 items
  
2020-12-08
v2.3.4.16
+ BUGFIXES
  - Offsets for global version updated for FFXIV Version 5.4

2020-12-03
v2.3.4.15
+ BUGFIXES
  - Chinese offsets updated for FFXIV Version 5.3
  - The Mod Import Time display no longer counts time spent in the item select screen.
  - When converting items on import, extraneous/unused files will no longer be added to the original item.

2020-11-02
v2.3.4.14
+ BUGFIXES
  - Resolved an issue wherein the application would crash when attempting to export a colorset file as PNG or BMP
    - Colorset files will now always export as DDS.
  - Resolved an issue wherein non-shape morph channels/blend shapes were not being properly applied on imported meshes.
  - Resolved an issue wherein restoring index backups with improper DAT counts would not have their DAT counts corrected after restoration.
  - Resolved an issue wherein importing multiple metadata files affecting the same set could result in the import variant data being set improperly.

2020-10-23
v2.3.4.13
+ MINOR
    - Added an error on import if the total number of vertices in a mesh group exceeds the maximum allowable limit due to the addition of shape data vertices.
+ BUGFIXES
    - Resolved an issue wherein hair items were not being properly converted when using the item converter.
    - Resolved an issue wherein morph targets were not having model modifiers properly applied (Ex. Copy UV1 to UV2)

2020-10-21
v2.3.4.12
+ MINOR
    - The [Include Everything] Options in the Standard and Advanced modpack creators now additionally include all referenced AVFX/ATEX files.
+ BUGFIXES
    - Resolved an issue wherein changing target item on import would fail under certain conditions.
    - Resolved an issue wherein Morph targets were not being properly scaled along with the model they modified.

2020-10-19
v2.3.4.11
+ MINOR