@@ -1,3 +1,12 @@
+2021-01-07
++ MINOR
+  - Verbiage Updates.
+  - Slight consistency adjustment to basic mod import dialog behavior.
++ BUGFIX
+  - Fixed Equipment Decals under #100 not being accessible.
+  - Fixed Chinese Client issues with FFXIV patch 5.31
+  
+
 2020-12-10
 v2.3.4.17
 + MINOR
